update api create order - new bug after latest update: can't create order